<resources>
    <string name="app_name">YouTravel</string>
    <string name="main_page_welcome">Welcome to YouTravel!</string>
    <string name="main_page_content">Want to travel, but don\'t know where to go?<br /> Let us help you make that decision!</string>
    <string name="page6_statistics">STATISTICS</string>

    <string name="nextButtonStr">NEXT</string>
    <string name="Page3_chooseInterest">Choose among the following interests for your trip:</string>
    <string name="Page3_nature">Nature</string>
    <string name="Page3_partying">Partying</string>
    <string name="Page3_culture">Culture</string>
    <string name="Page3_relaxation">Relaxation</string>
    <string name="Page3_chooseWeather">What kind of weather do you like?</string>
    <string name="Page3_hot">Hot</string>
    <string name="Page3_cold">Cold</string>
    <string name="Page3_average">Average</string>
    <string name="Page3_snowy">Snowy</string>
    <string name="Page3_chooseCurrency">Pick your currency:</string>
    <string-array name="currencies">
        <item>USD</item>
        <item>EUR</item>
        <item>JPY</item>
        <item>GBP</item>
        <item>CNY</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>HKD</item>
        <item>SGD</item>
        <item>SEK</item>
        <item>KRW</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>INR</item>
        <item>MXN</item>
        <item>TWD</item>
        <item>ZAR</item>
        <item>BRL</item>
    </string-array>
    <string name="page2_header1">To begin, please choose the dates you’d like to travel:</string>
    <string name="page2_helper1">From:</string>
    <string name="page2_helper2">To:</string>
    <string name="page2_btn1">Choose Date</string>
    <string name="page2_header2">Please enter your city airport\'s IATA code:</string>
    <string name="page2_hint">Eg: YVR</string>
    <string name="page2_header3">Please enter total number of Passengers:</string>
    <string name="page2_hint2">Eg: 5</string>
    <string name="next">Next</string>
    <string name="page4_title">Places You May Enjoy</string>
    <string name ="page4_location">Locations you may like to visit</string>
    <string name="page4_country">Country:  Canada</string>
    <string name="page4_city">City:  Vancouver </string>
    <string name="page4_description">Fun Holiday at Vancouver</string>
    <string name="page4_date">Date: 13/10/2022</string>
    <string name="page4_price">Price:  $2000</string>
    <string name="page4_select">Select</string>
    <string name="page7_thankYou">Thank you for using YouTravel!</string>
    <string name="page7_byeMessage">We wish you a great trip!</string>
    <string name="page7_btn">Finish</string>
</resources>