<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page2"
    android:padding="30dp">

    <TextView
        android:id="@+id/page2_header1"
        android:layout_width="341dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="52dp"
        android:text="@string/page2_header1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/page2_helper1"
        android:layout_width="60dp"
        android:layout_height="29dp"
        android:layout_below="@id/page2_header1"
        android:layout_alignStart="@id/page2_header1"
        android:layout_marginTop="25dp"
        android:text="@string/page2_helper1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/emptyTextView1"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_below="@id/dateBtn1"
        android:layout_alignStart="@id/page2_header1"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/emptyTextView2"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:layout_below="@id/dateBtn2"
        android:layout_alignStart="@id/dateBtn2"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/page2_helper2"
        android:layout_width="60dp"
        android:layout_height="29dp"
        android:layout_alignBottom="@id/page2_helper1"
        android:layout_marginStart="130dp"
        android:layout_toEndOf="@id/page2_helper1"
        android:text="@string/page2_helper2"
        android:textSize="18sp" />

    <Button
        android:id="@+id/dateBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/page2_header1"
        android:layout_below="@id/page2_helper1"
        android:text="@string/page2_btn1"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/dateBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/page2_helper2"
        android:layout_alignBottom="@id/dateBtn1"
        android:text="@string/page2_btn1" />

    <TextView
        android:id="@+id/page2_header2"
        android:layout_width="270dp"
        android:layout_height="38dp"
        android:layout_below="@id/emptyTextView1"
        android:layout_alignStart="@id/page2_header1"
        android:layout_marginTop="40dp"
        android:text="@string/page2_header2"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/page2_textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/page2_header2"
        android:layout_alignStart="@id/page2_header1"
        android:ems="10"
        android:autofillHints="postalAddress"
        android:hint="@string/page2_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/page2_header3"
        android:layout_width="270dp"
        android:layout_height="58dp"
        android:layout_below="@+id/page2_textInput"
        android:layout_alignStart="@id/page2_header1"
        android:layout_marginTop="40dp"
        android:text="@string/page2_header3"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/page2_textInput2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/page2_header3"
        android:layout_alignStart="@id/page2_header1"
        android:ems="10"
        android:inputType = "number"
        android:autofillHints=""
        android:hint="@string/page2_hint2"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/page2_nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/page2_textInput"
        android:layout_alignEnd="@id/page2_textInput"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="14dp"
        android:text="@string/next" />
</RelativeLayout>