<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="15dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="15dp" >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="15dp"
            android:elevation="10dp">

            <RelativeLayout
                android:id="@+id/cardBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/vancouver">

                <TextView
                    android:id="@+id/cityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/page4_city"
                    android:layout_marginTop="300dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/countryName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cityName"
                    android:layout_marginStart="10dp"
                    android:text="@string/page4_country"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/countryName"
                    android:layout_marginStart="10dp"
                    android:text="@string/page4_description"
                    android:textColor="@color/white" />


                <Button
                    android:id="@+id/Page4_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/description"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="40dp"
                    android:textSize="25sp"
                    android:text="@string/page4_select" />

                <Button
                    android:id="@+id/Page4_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/description"
                    android:layout_marginTop="30dp"
                    android:textSize="25sp"
                    android:layout_marginStart="200dp"
                    android:text="@string/next" />

            </RelativeLayout>




        </androidx.cardview.widget.CardView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>